--- a/src/componentes/personagens/filtros.css
+++ b/src/componentes/personagens/filtros.css
@@ -1,17 +1,21 @@
 .filtros {
   display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+  margin: 20px auto;
+  align-items: center;
+  gap: 1rem;
+  width: max-content;
 }
+
 .filtros label {
   margin-bottom: 10px;
   font-size: 16px;
   font-weight: 500;
 }
 
-.filtros input[type="text"]{
-  flex-grow: 1;
+.filtros input[type="text"]{ 
   padding: 15px 20px; 
   border-radius: 3px;
+  width: 400px;
+  font-size: 1rem;
   border: 1px solid #d0d0d0;
 }
