--- a/src/componentes/personagens/grade-personagem.css
+++ b/src/componentes/personagens/grade-personagem.css
@@ -1,6 +1,7 @@
 .grade-personagens {
   display: grid;
+  margin: 0 auto;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
+  grid-gap: 3rem;
   justify-items: center;
 }
